#1228: ModelGenerator: GeneratePathProperty=true is unreliable

--- a/Test/Test.Neon.Models/Test.Neon.Models.csproj
+++ b/Test/Test.Neon.Models/Test.Neon.Models.csproj
@@ -24,10 +24,12 @@
   </ItemGroup>
 
   <Target Name="ModelGen" BeforeTargets="CoreCompile" Condition="Exists('$(NF_ROOT)\Tools\neon-modelgen\bin\$(Configuration)\netcoreapp3.1\neon-modelgen.dll')">
+    <!--- Generate the model source files -->
     <Exec Command="dotnet &quot;%NF_ROOT%\Tools\neon-modelgen\bin\$(Configuration)\netcoreapp3.1\neon-modelgen.dll&quot; --target-namespace=Test.Neon.Models --persisted --debug-allow-stepinto &quot;$(SolutionDir)Test\Test.Neon.Models.Definitions\bin\$(Configuration)\netstandard2.0\Test.Neon.Models.Definitions.dll&quot; &quot;$(ProjectDir)Models\GeneratedTypes.mg.cs&quot;" />
     <Exec Command="dotnet &quot;%NF_ROOT%\Tools\neon-modelgen\bin\$(Configuration)\netcoreapp3.1\neon-modelgen.dll&quot; --target-namespace=Test.Neon.UxModels --persisted --ux=xaml &quot;$(SolutionDir)Test\Test.Neon.Models.Definitions\bin\$(Configuration)\netstandard2.0\Test.Neon.Models.Definitions.dll&quot; &quot;$(ProjectDir)Models\GeneratedUxTypes.mg.cs&quot;" />
     <ItemGroup>
-      <Compile Include="Models/*.cs" />
+      <!--- Ensure that the new files are included in the build -->
+      <Compile Include="**\*.cs" KeepDuplicates="false" />
     </ItemGroup>
   </Target>
 
