--- a/Lib/Neon.Kube.Models/Neon.Kube.Models.csproj
+++ b/Lib/Neon.Kube.Models/Neon.Kube.Models.csproj
@@ -26,6 +26,7 @@
     <PackageTags></PackageTags>
     <NoDefaultExcludes>true</NoDefaultExcludes>
     <PackageIconUrl />
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
