--- a/Lib/Neon.Temporal/Neon.Temporal.csproj
+++ b/Lib/Neon.Temporal/Neon.Temporal.csproj
@@ -26,6 +26,7 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>temporal workflow client</PackageTags>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
