--- a/Lib/Neon.Xunit.Identity/Neon.Xunit.Identity.csproj
+++ b/Lib/Neon.Xunit.Identity/Neon.Xunit.Identity.csproj
@@ -5,6 +5,7 @@
     <OutputType>Library</OutputType>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
