--- a/Services/neon-identity-service/neon-identity-service.csproj
+++ b/Services/neon-identity-service/neon-identity-service.csproj
@@ -7,6 +7,7 @@
     <AssemblyName>neon-identity-service</AssemblyName>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <LangVersion>latest</LangVersion>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
