--- a/Test/Test.Neon.Cadence/Test.Neon.Cadence.csproj
+++ b/Test/Test.Neon.Cadence/Test.Neon.Cadence.csproj
@@ -9,6 +9,7 @@
     <AssemblyName>Test.Neon.Cadence</AssemblyName>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
