--- a/Test/Test.Neon.ModelGenCli/Test.Neon.ModelGenCli.csproj
+++ b/Test/Test.Neon.ModelGenCli/Test.Neon.ModelGenCli.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Test.ModelGenCli</RootNamespace>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;CodeDoc</Configurations>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
