--- a/Tools/neon-modelgen/neon-modelgen.csproj
+++ b/Tools/neon-modelgen/neon-modelgen.csproj
@@ -7,6 +7,7 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <RootNamespace>NeonModelGen</RootNamespace>
     <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
