--- a/Lib/Neon.Kube.HyperVLocal/Neon.Kube.HyperVLocal.csproj
+++ b/Lib/Neon.Kube.HyperVLocal/Neon.Kube.HyperVLocal.csproj
@@ -23,6 +23,7 @@
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>kubernetes</PackageTags>
     <RootNamespace>Neon.Kube</RootNamespace>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
