--- a/Lib/Neon.Kube.Xunit/Neon.Kube.Xunit.csproj
+++ b/Lib/Neon.Kube.Xunit/Neon.Kube.Xunit.csproj
@@ -25,6 +25,7 @@
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>xunit kubernetes</PackageTags>
     <Company>neonFORGE LLC</Company>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
