--- a/Services/neon-setup-grafana/neon-setup-grafana.csproj
+++ b/Services/neon-setup-grafana/neon-setup-grafana.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>NeonSetupGrafana</RootNamespace>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <ItemGroup>
