--- a/Services/neon-setup-harbor/neon-setup-harbor.csproj
+++ b/Services/neon-setup-harbor/neon-setup-harbor.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>neon_setup_harbor</RootNamespace>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <ItemGroup>
