--- a/Services/test-cadence/test-cadence.csproj
+++ b/Services/test-cadence/test-cadence.csproj
@@ -5,6 +5,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>CadenceService</RootNamespace>
     <Configurations>Debug;Release;CodeDoc</Configurations>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <ItemGroup>
