--- a/Test/Test.Neon.ModelGen/Test.Neon.ModelGen.csproj
+++ b/Test/Test.Neon.ModelGen/Test.Neon.ModelGen.csproj
@@ -7,6 +7,7 @@
     <LangVersion>latest</LangVersion>
     <RootNamespace>TestModelGen</RootNamespace>
     <Configurations>Debug;Release;CodeDoc</Configurations>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
