--- a/Test/Test.Neon.Temporal/Test.Neon.Temporal.csproj
+++ b/Test/Test.Neon.Temporal/Test.Neon.Temporal.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>TestTemporal</RootNamespace>
     <AssemblyName>Test.Neon.Temporal</AssemblyName>
     <Configurations>Debug;Release;CodeDoc</Configurations>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
