--- a/Tools/gh-tool/gh-tool.csproj
+++ b/Tools/gh-tool/gh-tool.csproj
@@ -11,6 +11,7 @@
     <Company>neonFORGE LLC</Company>
     <Description>Misc GitHub related tools</Description>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <ItemGroup>
