--- a/Tools/neon-cli/neon-cli.csproj
+++ b/Tools/neon-cli/neon-cli.csproj
@@ -12,6 +12,7 @@
     <Company>neonFORGE LLC</Company>
     <Description>Manage neonKUBE clusters from the command line</Description>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
