--- a/Lib/Neon.SSH/Neon.SSH.csproj
+++ b/Lib/Neon.SSH/Neon.SSH.csproj
@@ -24,7 +24,7 @@ NOTE: This package has been tested against remote machines running Ubuntu 18.04+
     <FileVersion>0.0.0.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
