--- a/Lib/Neon.Xunit.YugaByte/Neon.Xunit.YugaByte.csproj
+++ b/Lib/Neon.Xunit.YugaByte/Neon.Xunit.YugaByte.csproj
@@ -21,7 +21,7 @@
     <Authors>neonFORGE Team</Authors>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
