--- a/Test/Test.Neon.Common/Test.Neon.Common.csproj
+++ b/Test/Test.Neon.Common/Test.Neon.Common.csproj
@@ -8,7 +8,7 @@
     <RootNamespace>TestCommon</RootNamespace>
     <AssemblyName>Test.Neon.Common</AssemblyName>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
