--- a/Test/Test.Neon.Identity/Test.Neon.Identity.csproj
+++ b/Test/Test.Neon.Identity/Test.Neon.Identity.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>TestIdentity</RootNamespace>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp3.1|AnyCPU'">
