--- a/Test/Test.Neon.Models.Cadence/Test.Neon.Models.Cadence.csproj
+++ b/Test/Test.Neon.Models.Cadence/Test.Neon.Models.Cadence.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
