--- a/Test/Test.Neon.Service/Test.Neon.Service.csproj
+++ b/Test/Test.Neon.Service/Test.Neon.Service.csproj
@@ -6,7 +6,7 @@
     <LangVersion>latest</LangVersion>
     <RootNamespace>TestNeonService</RootNamespace>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
