--- a/Test/Test.Neon.Xunit/Test.Neon.Xunit.csproj
+++ b/Test/Test.Neon.Xunit/Test.Neon.Xunit.csproj
@@ -7,7 +7,7 @@
     <RootNamespace>TestXunit</RootNamespace>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
