--- a/Lib/Neon.Kube/Resources/Helm/harbor/Chart.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/Chart.yaml
@@ -1,22 +1,20 @@
-apiVersion: v1
-name: harbor
-version: 1.5.3
-appVersion: 2.1.3
-description: An open source trusted cloud native registry that stores, signs, and scans content
-keywords:
-- docker
-- registry
-- harbor
-home: https://goharbor.io
-icon: https://raw.githubusercontent.com/goharbor/website/master/static/img/logos/harbor-icon-color.png
-sources:
-- https://github.com/goharbor/harbor
-- https://github.com/goharbor/harbor-helm
-maintainers:
-- name: Wenkai Yin
-  email: yinw@vmware.com
-- name: Weiwei He
-  email: hweiwei@vmware.com
-- name: Qian Deng
-  email: dengq@vmware.com
-engine: gotpl
+apiVersion: v2
+name: harbor-operator
+description: Deploy Harbor Operator
+
+type: application
+
+# This is the chart version. This version number should be incremented each time you make changes
+# to the chart and its templates, including the app version.
+# Versions are expected to follow Semantic Versioning (https://semver.org/)
+version: 0.1.0
+
+kubeVersion: '>= 1.16.0-0'
+
+# This is the version number of the application being deployed. This version number should be
+# incremented each time you make changes to the application. Versions are not expected to
+# follow Semantic Versioning. They should reflect the version the application is using.
+appVersion: 0.0.0-dev
+
+home: https://github.com/goharbor/harbor-operator
+icon: https://branding.cncf.io/img/projects/harbor/icon/color/harbor-icon-color.svg
