use password for grafana

--- a/Lib/Neon.Kube/Resources/Helm/grafana/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/values.yaml
@@ -425,7 +425,8 @@ grafana.ini:
     type: postgres
     host: db-citus-postgresql.neon-system.svc.cluster.local
     name: grafana
-    user: grafana
+    user: neon_service
+    password: $__env{DATABASE_PASSWORD}
   paths:
     data: /var/lib/grafana/data
     logs: /var/log/grafana
