[build]: GenerateTargetFrameworkAttribute is causing compiler errors over at neonCLOUD.  Disabling here too.

--- a/Images/Images.csproj
+++ b/Images/Images.csproj
@@ -5,6 +5,8 @@
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <ItemGroup>
