--- a/Lib/Neon.Xunit.Identity/Neon.Xunit.Identity.csproj
+++ b/Lib/Neon.Xunit.Identity/Neon.Xunit.Identity.csproj
@@ -6,6 +6,7 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
