--- a/Test/Test.Neon.Web/Test.Neon.Web.csproj
+++ b/Test/Test.Neon.Web/Test.Neon.Web.csproj
@@ -9,6 +9,7 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
