--- a/Lib/Neon.Docker/Neon.Docker.csproj
+++ b/Lib/Neon.Docker/Neon.Docker.csproj
@@ -25,6 +25,7 @@
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>docker</PackageTags>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
