--- a/Lib/Neon.Kube.BareMetal/Neon.Kube.BareMetal.csproj
+++ b/Lib/Neon.Kube.BareMetal/Neon.Kube.BareMetal.csproj
@@ -24,6 +24,7 @@
     <PackageTags>kubernetes</PackageTags>
     <RootNamespace>Neon.Kube</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
