--- a/Lib/Neon.Nats/Neon.Nats.csproj
+++ b/Lib/Neon.Nats/Neon.Nats.csproj
@@ -26,6 +26,7 @@
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>NATS</PackageTags>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
