--- a/Lib/Neon.XenServer/Neon.XenServer.csproj
+++ b/Lib/Neon.XenServer/Neon.XenServer.csproj
@@ -23,6 +23,7 @@
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>XenServer</PackageTags>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
