--- a/Test/Test.Neon.ModelGenCli/Test.Neon.ModelGenCli.csproj
+++ b/Test/Test.Neon.ModelGenCli/Test.Neon.ModelGenCli.csproj
@@ -7,6 +7,7 @@
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
