--- a/Test/Test.Neon.Models.Cadence/Test.Neon.Models.Cadence.csproj
+++ b/Test/Test.Neon.Models.Cadence/Test.Neon.Models.Cadence.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <ItemGroup>
