--- a/Test/Test.Neon.YugaByte/Test.Neon.YugaByte.csproj
+++ b/Test/Test.Neon.YugaByte/Test.Neon.YugaByte.csproj
@@ -7,6 +7,7 @@
     <RootNamespace>TestYugaByte</RootNamespace>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net48|AnyCPU'">
