--- a/Tools/gh-tool/gh-tool.csproj
+++ b/Tools/gh-tool/gh-tool.csproj
@@ -12,6 +12,7 @@
     <Description>Misc GitHub related tools</Description>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <ItemGroup>
