set default to IfNotPresent

--- a/Lib/Neon.Kube/Resources/Helm/kiali/templates/deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/kiali/templates/deployment.yaml
@@ -40,7 +40,7 @@ spec:
       containers:
       - name: operator
         image: "{{ .Values.image.organization }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy | default "Always" }}
+        imagePullPolicy: {{ .Values.image.pullPolicy | default "IfNotPresent" }}
         args:
         - "--zap-level=info"
         volumeMounts:
